@@ -1281,3 +1281,6 @@
 	  (see email thread: http://tech.groups.yahoo.com/group/nuttx/message/530)
 	* drivers/mtd/at45db.c - Add a driver for the Atmel AT45DB161D 4Mbit
 	  SPI FLASH part (untested on initial check-in).
+	* examples/ostest/prioinherit.c - Need to reinitialize globals if
+	  test is ran repeatedly in a loop.
+
